# creatorDemo

./: README.md
3dMove/assets/scene/: climb.scene
demos/3dMove/: package.json
demos/3dMove/assets/model/: map.fbx
demos/3dMove/assets/prefab/: map.prefab
demos/3dMove/assets/script/: move.ts
demos/AndroidSdkDemo-3.4.2/: global.d.ts  package.json
demos/AndroidSdkDemo-3.4.2/assets/scene/: main.scene
demos/AndroidSdkDemo-3.4.2/assets/script/: tdsdk.ts  test.ts
demos/SpineTest-3.5.1/: README.md  package.json
demos/SpineTest-3.5.1/assets/res/spine/mix-and-match/: mix-and-match-pro.atlas  mix-and-match-pro.json
demos/SpineTest-3.5.1/assets/scene/: spine.scene
demos/SpineTest-3.5.1/assets/script/: SpineTest.ts  SpineUtil.ts
demos/SpineTest-3.5.1/bakNative/: jsb_spine_manual.cpp  路径.txt
demos/SpineTest-3.5.1/native/engine/android/: CMakeLists.txt
demos/SpineTest-3.5.1/native/engine/android/app/: AndroidManifest.xml
demos/SpineTest-3.5.1/native/engine/android/instantapp/: AndroidManifest.xml  build.gradle
demos/SpineTest-3.5.1/native/engine/android/res/values/: strings.xml
demos/SpineTest-3.5.1/native/engine/common/: CMakeLists.txt
demos/SpineTest-3.5.1/native/engine/common/Classes/: Game.cpp  Game.h  jsb_spine_cloth.h
demos/structArray/assets/scripts/: talkItem.ts
structArray/: project.json
structArray/assets/scripts/: testTalk.ts
